--- a/flutter/android/build.gradle
+++ b/flutter/android/build.gradle
@@ -38,6 +38,12 @@ android {
         }
     }
 
+    buildTypes {
+        release {
+            consumerProguardFiles 'proguard-rules.pro'
+        }
+    }
+
     compileOptions {
         sourceCompatibility = JavaVersion.VERSION_1_8
         targetCompatibility = JavaVersion.VERSION_1_8
