Fix: Dart and Flutter analyzers (#207)

--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -76,25 +76,18 @@ jobs:
             ;;
             esac
 
-  format:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - uses: subosito/flutter-action@v1
-      - run: |
-          cd flutter
-          flutter pub get
-          flutter format --set-exit-if-changed .
-
   analyze:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
       - uses: subosito/flutter-action@v1
+        with:
+          channel: 'beta'
       - run: |
           cd flutter
           flutter pub get
-          flutter analyze
+          flutter format -n --set-exit-if-changed ./
+          flutter analyze ./
 
   package-analysis:
     runs-on: ubuntu-latest
