--- a/dart/pubspec.yaml
+++ b/dart/pubspec.yaml
@@ -19,5 +19,6 @@ dev_dependencies:
   mockito: ^4.1.3
   pedantic: ^1.9.2
   test: ^1.15.7
+  yaml: ^2.2.1 # needed for version match (code and pubspec)
   collection: ^1.14.13
   coverage: ^0.14.2
