--- a/flutter/pubspec.yaml
+++ b/flutter/pubspec.yaml
@@ -24,6 +24,7 @@ dev_dependencies:
     sdk: flutter
   mockito: ^4.1.3
   test: ^1.15.7
+  yaml: ^2.2.1 # needed for version match (code and pubspec)
   pedantic: ^1.9.2
 
 flutter:
