--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -26,6 +26,12 @@ jobs:
           # No web on stable yet
           - channel: stable
             target: web
+          # macos-latest is taking hours due to limited resources
+          - os: macos-latest
+            target: android
+          - os: macos-latest
+            target: web
+
     steps:
         - uses: actions/checkout@v2
 
