--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -30,6 +30,9 @@ jobs:
             sdk: dev
           - os: macos-latest
             sdk: beta
+          # macos-latest is taking hours due to limited resources
+          - os: macos-latest
+            sdk: dev
 
     steps:
         - uses: cedx/setup-dart@v2
