Fix: package usage as git dependency
Using the development path in the dependency section prevents the package from being used as git dependency. A better approach is to add the custom path to dependency_overrides - this way a consumer can also override the sentry dependency.

--- a/flutter/example/pubspec.yaml
+++ b/flutter/example/pubspec.yaml
@@ -10,11 +10,14 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  sentry_flutter: any
+  universal_platform: ^0.1.3
 
+dependency_overrides:
+  sentry:
+    path: ../../dart
   sentry_flutter:
     path: ../
-
-  universal_platform: ^0.1.3
 
 flutter:
   uses-material-design: true
