--- a/dart/example_web/pubspec.yaml
+++ b/dart/example_web/pubspec.yaml
@@ -7,10 +7,13 @@ environment:
   sdk: ^2.8.0
 
 dependencies:
-  sentry:
-    path: ../
+  sentry: any
 
 dev_dependencies:
   build_runner: ^1.10.0
   build_web_compilers: ^2.13.0
   pedantic: ^1.9.0
+
+dependency_overrides:
+  sentry:
+    path: ../
