--- a/dart/example_web/pubspec.yaml
+++ b/dart/example_web/pubspec.yaml
@@ -8,9 +8,12 @@ environment:
 
 dependencies:
   sentry:
-    path: ../
 
 dev_dependencies:
   build_runner: ^1.10.0
   build_web_compilers: ^2.13.0
   pedantic: ^1.9.0
+
+dependency_overrides:
+  sentry:
+    path: ../
