--- a/flutter/example/pubspec.yaml
+++ b/flutter/example/pubspec.yaml
@@ -11,10 +11,15 @@ dependencies:
   flutter:
     sdk: flutter
 
-  sentry_flutter:
-    path: ../
+  sentry_flutter: any
 
   universal_platform: ^0.1.3
+
+dependency_overrides:
+  sentry:
+    path: ../../dart
+  sentry_flutter:
+    path: ../
 
 flutter:
   uses-material-design: true
