--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -37,7 +37,7 @@ jobs:
 
         - uses: actions/setup-java@v1
           with:
-              java-version: '8'
+            java-version: '8'
 
         - uses: subosito/flutter-action@v1
           with:
@@ -133,9 +133,13 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - uses: actions/setup-java@v1
+        with:
+          java-version: '8'
       - run: |
-          brew install ktlint
-          ktlint --reporter=checkstyle,output=build/ktlint-report.xml || true
+          curl -sSLO https://github.com/pinterest/ktlint/releases/download/0.40.0/ktlint
+          chmod a+x ktlint
+          ./ktlint --reporter=checkstyle,output=build/ktlint-report.xml || true
       - uses: yutailang0119/action-ktlint@v1
         with:
           xml_path: build/ktlint-report.xml
