--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -68,23 +68,24 @@ jobs:
           dart analyze --fatal-infos
           dart format --set-exit-if-changed ./
 
-  package-analysis:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - uses: axel-op/dart-package-analyzer@v3
-        id: analysis
-        with:
-          githubToken: ${{ secrets.GITHUB_TOKEN }}
-          relativePath: dart/
-      - name: Check scores
-        env:
-          TOTAL: ${{ steps.analysis.outputs.total }}
-          TOTAL_MAX: ${{ steps.analysis.outputs.total_max }}
-        run: |
-          PERCENTAGE=$(( $TOTAL * 100 / $TOTAL_MAX ))
-          if (( $PERCENTAGE < 100 ))
-          then
-            echo Score too low!
-            exit 1
-          fi
+  # failing due to https://github.com/axel-op/dart-package-analyzer/issues/12
+  # package-analysis:
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - uses: actions/checkout@v2
+  #     - uses: axel-op/dart-package-analyzer@v3
+  #       id: analysis
+  #       with:
+  #         githubToken: ${{ secrets.GITHUB_TOKEN }}
+  #         relativePath: dart/
+  #     - name: Check scores
+  #       env:
+  #         TOTAL: ${{ steps.analysis.outputs.total }}
+  #         TOTAL_MAX: ${{ steps.analysis.outputs.total_max }}
+  #       run: |
+  #         PERCENTAGE=$(( $TOTAL * 100 / $TOTAL_MAX ))
+  #         if (( $PERCENTAGE < 100 ))
+  #         then
+  #           echo Score too low!
+  #           exit 1
+  #         fi
