--- a/flutter/example/android/app/build.gradle
+++ b/flutter/example/android/app/build.gradle
@@ -66,7 +66,7 @@ android {
 
     // TODO: we need to fix CI as the version 21.1 (default) is not installed by default on
     // GH Actions.
-    ndkVersion "21.3.6528147" // ubuntu requires 21.3.6528147
+    ndkVersion "21.4.7075529" // windows requires 21.4.7075529
 
     externalNativeBuild {
         cmake {
