--- a/dart/pubspec.yaml
+++ b/dart/pubspec.yaml
@@ -7,7 +7,7 @@ homepage: https://docs.sentry.io/platforms/dart/
 repository: https://github.com/getsentry/sentry-dart
 
 environment:
-  sdk: ">=2.8.0 <3.0.0"
+  sdk: '>=2.12.0-259.8.beta <3.0.0'
 
 dependencies:
   http: ^0.13.0
