--- a/dart/pubspec.yaml
+++ b/dart/pubspec.yaml
@@ -11,9 +11,9 @@ environment:
 
 dependencies:
   http: ^0.13.0
-  meta: ^1.3.0-nullsafety.6
+  meta: ^1.3.0
   stack_trace: ^1.10.0
-  uuid: ^3.0.0-nullsafety.0
+  uuid: ^3.0.0-nullsafety.1
 
 dev_dependencies:
   mockito: ^5.0.0-nullsafety.7
