--- a/flutter/pubspec.yaml
+++ b/flutter/pubspec.yaml
@@ -13,16 +13,16 @@ dependencies:
     sdk: flutter
   flutter_web_plugins:
     sdk: flutter
-  sentry: ">=4.0.0 <5.0.0"
-  package_info: ^0.4.0
+  # this should point to pub
+  sentry: ^4.0.5
+  package_info: ^2.0.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  mockito: ^4.1.3
-  test: ^1.15.7
-  yaml: ^2.2.1 # needed for version match (code and pubspec)
-  pedantic: ^1.9.2
+  mockito: ^5.0.0-nullsafety.7
+  yaml: ^3.0.0 # needed for version match (code and pubspec)
+  pedantic: ^1.10.0
 
 dependency_overrides:
   sentry:
