--- a/dart/pubspec.yaml
+++ b/dart/pubspec.yaml
@@ -13,7 +13,7 @@ dependencies:
   http: ^0.12.0
   meta: ^1.0.0
   stack_trace: ^1.0.0
-  uuid: ^3.0.1
+  uuid: '>=2.0.0 <4.0.0'
 
 dev_dependencies:
   mockito: ^4.1.3
