--- a/flutter/pubspec.yaml
+++ b/flutter/pubspec.yaml
@@ -23,6 +23,7 @@ dev_dependencies:
   mockito: ^5.0.0-nullsafety.7
   yaml: ^3.0.0 # needed for version match (code and pubspec)
   pedantic: ^1.10.0
+  build_runner: ^1.11.5
 
 dependency_overrides:
   sentry:
