--- a/flutter/pubspec.yaml
+++ b/flutter/pubspec.yaml
@@ -20,7 +20,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  mockito: ^5.0.0-nullsafety.7
+  mockito: ^5.0.0
   yaml: ^3.0.0 # needed for version match (code and pubspec)
   pedantic: ^1.10.0
   build_runner: ^1.11.5
