--- a/dart/example_web/pubspec.yaml
+++ b/dart/example_web/pubspec.yaml
@@ -4,15 +4,15 @@ description: An absolute bare-bones web app.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
 environment:
-  sdk: ^2.8.0
+  sdk: '>=2.12.0 <3.0.0'
 
 dependencies:
   sentry: any
 
 dev_dependencies:
-  build_runner: ^1.10.0
-  build_web_compilers: ^2.13.0
-  pedantic: ^1.9.0
+  build_runner: ^1.11.5
+  build_web_compilers: ^2.16.4
+  pedantic: ^1.11.0
 
 dependency_overrides:
   sentry:
