--- a/flutter/example/pubspec.yaml
+++ b/flutter/example/pubspec.yaml
@@ -5,13 +5,13 @@ version: 0.1.2+3
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
 environment:
-  sdk: ">=2.8.0 <3.0.0"
+  sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
   sentry_flutter: any
-  universal_platform: ^0.1.3
+  universal_platform: ^1.0.0-nullsafety
 
 dependency_overrides:
   sentry:
