--- a/flutter/example/pubspec.yaml
+++ b/flutter/example/pubspec.yaml
@@ -5,7 +5,8 @@ version: 0.1.2+3
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
+  sdk: '>=2.12.0 <3.0.0'
+  flutter: '>=2.0.0'
 
 dependencies:
   flutter:
