--- a/flutter/pubspec.yaml
+++ b/flutter/pubspec.yaml
@@ -6,7 +6,7 @@ repository: https://github.com/getsentry/sentry-dart
 
 environment:
   sdk: '>=2.12.0 <3.0.0'
-  flutter: ">=1.17.0"
+  flutter: '>=1.17.0'
 
 dependencies:
   flutter:
