--- a/flutter/pubspec.yaml
+++ b/flutter/pubspec.yaml
@@ -14,7 +14,7 @@ dependencies:
   flutter_web_plugins:
     sdk: flutter
   # this should point to pub
-  sentry: ^4.0.5
+  sentry: ^4.1.0-nullsafety.0
   package_info: ^2.0.0
 
 dev_dependencies:
