--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -40,9 +40,8 @@ jobs:
           with:
             channel: ${{ matrix.channel }}
 
-        - name: enable web
-          if: matrix.target == 'web'
-          run: flutter config --enable-web
+        - run: flutter upgrade
+        - run: flutter pub get
 
         # https://github.com/flutter/flutter/issues/59522#issuecomment-646208247
         - name: Fix iOS build bug
@@ -52,7 +51,6 @@ jobs:
         - name: Test
           run: |
             cd flutter
-            flutter pub get
             flutter test --coverage
 
         - uses: codecov/codecov-action@v1
@@ -86,7 +84,6 @@ jobs:
       - uses: subosito/flutter-action@v1
       - run: |
           cd flutter
-          flutter pub get
           flutter format -n --set-exit-if-changed ./
           flutter analyze
 
@@ -116,6 +113,8 @@ jobs:
     runs-on: macos-latest
     steps:
       - uses: actions/checkout@v2
+      - uses: subosito/flutter-action@v1
+
       # https://github.com/CocoaPods/CocoaPods/issues/5275#issuecomment-315461879
       - run: pod lib lint flutter/ios/sentry_flutter.podspec --skip-import-validation --allow-warnings
 
