--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -41,7 +41,6 @@ jobs:
             channel: ${{ matrix.channel }}
 
         - run: flutter upgrade
-        - run: flutter pub get
 
         # https://github.com/flutter/flutter/issues/59522#issuecomment-646208247
         - name: Fix iOS build bug
@@ -51,6 +50,7 @@ jobs:
         - name: Test
           run: |
             cd flutter
+            flutter pub get
             flutter test --coverage
 
         - uses: codecov/codecov-action@v1
@@ -65,6 +65,7 @@ jobs:
           run: |
             cd flutter/example
             TARGET=${{ matrix.target }}
+            flutter pub get
             case $TARGET in
             ios)
             flutter build ios --release --no-codesign
@@ -84,6 +85,7 @@ jobs:
       - uses: subosito/flutter-action@v1
       - run: |
           cd flutter
+          flutter pub get
           flutter format -n --set-exit-if-changed ./
           flutter analyze
 
