Fix: Plugin registrant warning

--- a/flutter/analysis_options.yaml
+++ b/flutter/analysis_options.yaml
@@ -24,3 +24,4 @@ linter:
   rules:
     prefer_relative_imports: true
     unnecessary_brace_in_string_interps: true
+    implementation_imports: true
