--- a/flutter/pubspec.yaml
+++ b/flutter/pubspec.yaml
@@ -14,7 +14,7 @@ dependencies:
   flutter_web_plugins:
     sdk: flutter
   sentry: ^4.1.0-nullsafety.1
-  package_info: ^2.0.0
+  package_info_plus: ^1.0.0
 
 dev_dependencies:
   flutter_test:
