Try debug instead of release

--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -63,7 +63,7 @@ jobs:
             flutter pub get
             case $TARGET in
             ios)
-            flutter build ios --release --no-codesign
+            flutter build ios --debug --no-codesign
             ;;
             android)
             flutter build appbundle --release
