--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -17,9 +17,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        # TODO: cedx/setup-dart@v2 doesn't work on Windows (doesn't add pub to the PATH?)
-        # os: [ubuntu-latest, windows-latest, macos-latest]
-        os: [ubuntu-latest, macos-latest]
+        os: [ubuntu-latest, windows-latest, macos-latest]
         sdk: [stable, beta, dev]
         exclude:
           # Bad state: Could not run tests with Observatory enabled. Try setting a different port with --port option.
@@ -35,7 +33,7 @@ jobs:
             sdk: dev
 
     steps:
-        - uses: cedx/setup-dart@v2
+        - uses: dart-lang/setup-dart@v1
           with:
             release-channel: ${{ matrix.sdk }}
         - uses: actions/checkout@v2
@@ -59,7 +57,7 @@ jobs:
       run:
         working-directory: ./dart
     steps:
-      - uses: cedx/setup-dart@v2
+      - uses: dart-lang/setup-dart@v1
         with:
           release-channel: stable
       - uses: actions/checkout@v2
