MacOS native integration

--- a/flutter/pubspec.yaml
+++ b/flutter/pubspec.yaml
@@ -37,6 +37,8 @@ flutter:
         package: io.sentry.flutter
       ios:
         pluginClass: SentryFlutterPlugin
+      macos:
+        pluginClass: SentryFlutterPlugin
       web:
         pluginClass: SentryFlutterWeb
         fileName: sentry_flutter_web.dart
