--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -17,8 +17,7 @@ jobs:
       matrix:
         os: [ubuntu-latest, windows-latest, macos-latest]
         target: ['ios', 'android', 'web']
-        # 'beta' channel is not working https://github.com/flutter/flutter/issues/78785
-        channel: ['stable']
+        channel: ['stable', 'beta']
         exclude:
           - os: ubuntu-latest
             target: ios
