--- a/flutter/pubspec.yaml
+++ b/flutter/pubspec.yaml
@@ -41,3 +41,5 @@ flutter:
       web:
         pluginClass: SentryFlutterWeb
         fileName: sentry_flutter_web.dart
+      linux:
+        pluginClass: SentryFlutterPlugin
