--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -45,6 +45,14 @@ jobs:
           with:
             java-version: '8'
 
+        # Install required dependencies for Flutter on Linux on Ubuntu
+        - name: 'Setup Linux'
+            run: |
+              sudo apt update
+              sudo apt install -y cmake dbus libblkid-dev libgtk-3-dev liblzma-dev ninja-build pkg-config xvfb
+              sudo apt install -y network-manager upower
+            if: matrix.os == 'ubuntu-latest'
+
         - uses: subosito/flutter-action@v1
           with:
             channel: ${{ matrix.channel }}
