--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -34,7 +34,7 @@ jobs:
 
         - uses: actions/setup-java@v2
           with:
-            distribution: 'zulu'
+            distribution: 'adopt'
             java-version: '8'
 
         - uses: subosito/flutter-action@v1
