--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -32,8 +32,9 @@ jobs:
     steps:
         - uses: actions/checkout@v2
 
-        - uses: actions/setup-java@v1
+        - uses: actions/setup-java@v2
           with:
+            distribution: 'adopt'
             java-version: '8'
 
         - uses: subosito/flutter-action@v1
@@ -124,8 +125,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: actions/setup-java@v1
+      - uses: actions/setup-java@v2
         with:
+          distribution: 'adopt'
           java-version: '8'
       - run: |
           curl -sSLO https://github.com/pinterest/ktlint/releases/download/0.40.0/ktlint
