--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -16,14 +16,17 @@ jobs:
       # max-parallel: 4
       matrix:
         os: [ubuntu-latest, windows-latest, macos-latest]
-        target: ['ios', 'android', 'web', 'macos']
-        # 'beta' channel is not working https://github.com/flutter/flutter/issues/78785
+        target: ['ios', 'android', 'web', 'macos', 'windows']
         channel: ['stable', 'beta']
         exclude:
           - os: ubuntu-latest
             target: ios
           - os: ubuntu-latest
             target: macos
+          - os: ubuntu-latest
+            target: windows
+          - os: macos-latest
+            target: windows
           - os: windows-latest
             target: ios
           - os: windows-latest
@@ -82,6 +85,9 @@ jobs:
             ;;
             web)
             flutter build web
+            ;;
+            windows)
+            flutter build windows --release
             ;;
             esac
 
