--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -96,7 +96,7 @@ jobs:
             flutter build web
             ;;
             linux)
-            flutter build linux
+            flutter build linux --release
             ;;
             esac
 
