--release is the default

--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -95,7 +95,7 @@ jobs:
             flutter build web
             ;;
             linux)
-            flutter build linux --release
+            flutter build linux
             ;;
             esac
 
