--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -87,7 +87,7 @@ jobs:
             flutter build web
             ;;
             windows)
-            flutter build windows --release
+            flutter build windows
             ;;
             esac
 
