--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -139,13 +139,12 @@ jobs:
             exit 1
           fi
 
-# uncomment after fixing #348
-#   pod-lint:
-#     runs-on: macos-latest
-#     steps:
-#       - uses: actions/checkout@v2
-#       # https://github.com/CocoaPods/CocoaPods/issues/5275#issuecomment-315461879
-#       - run: pod lib lint flutter/ios/sentry_flutter.podspec --skip-import-validation --allow-warnings
+  pod-lint:
+    runs-on: macos-latest
+    steps:
+      - uses: actions/checkout@v2
+      # https://github.com/CocoaPods/CocoaPods/issues/5275#issuecomment-315461879
+      - run: pod lib lint flutter/ios/sentry_flutter.podspec --skip-import-validation --allow-warnings
 
   swift-lint:
     runs-on: ubuntu-latest
