Add Pod Lint for macOS

--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -145,6 +145,7 @@ jobs:
       - uses: actions/checkout@v2
       # https://github.com/CocoaPods/CocoaPods/issues/5275#issuecomment-315461879
       - run: pod lib lint flutter/ios/sentry_flutter.podspec --skip-import-validation --allow-warnings
+      - run: pod lib lint flutter/macos/sentry_flutter.podspec --skip-import-validation --allow-warnings
 
   swift-lint:
     runs-on: ubuntu-latest
