--- a/flutter/pubspec.yaml
+++ b/flutter/pubspec.yaml
@@ -37,7 +37,7 @@ flutter:
       ios:
         pluginClass: SentryFlutterPlugin
       macos:
-        pluginClass: SentryFlutterPluginApple
+        pluginClass: SentryFlutterPlugin
       web:
         pluginClass: SentryFlutterWeb
         fileName: sentry_flutter_web.dart
