--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -105,6 +105,16 @@ jobs:
             flutter build windows
             ;;
             esac
+  
+  web-test:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: subosito/flutter-action@v1
+      - run: |
+          cd flutter
+          flutter pub get
+          flutter test --platform chrome
 
   analyze:
     runs-on: ubuntu-latest
