--- a/flutter/pubspec.yaml
+++ b/flutter/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
     sdk: flutter
   sentry: ^5.0.0
   package_info_plus: ^1.0.0
+  device_info_plus: ^1.0.0
 
 dev_dependencies:
   flutter_test:
