Fix: Enable tests on browser (#446)
* Make tests runnable on web

* workflow

* PR feedback

* Update presubmit.sh

--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -67,6 +67,7 @@ jobs:
           run: |
             cd flutter
             flutter pub get
+            flutter test --platform chrome
             flutter test --coverage
 
         - uses: codecov/codecov-action@v1
