--- a/flutter/example/pubspec.yaml
+++ b/flutter/example/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
     sdk: flutter
   sentry_flutter: any
   universal_platform: ^1.0.0-nullsafety
+  device_info_plus: ^1.0.0
 
 dependency_overrides:
   sentry:
