Revert removal of iOS/macOS

--- a/flutter/pubspec.yaml
+++ b/flutter/pubspec.yaml
@@ -34,6 +34,10 @@ flutter:
       android:
         pluginClass: SentryFlutterPlugin
         package: io.sentry.flutter
+      ios:
+        pluginClass: SentryFlutterPlugin
+      macos:
+        pluginClass: SentryFlutterPlugin
       web:
         pluginClass: SentryFlutterWeb
         fileName: sentry_flutter_web.dart
