--- a/flutter/example/pubspec.yaml
+++ b/flutter/example/pubspec.yaml
@@ -13,7 +13,8 @@ dependencies:
     sdk: flutter
   sentry_flutter: any
   universal_platform: ^1.0.0-nullsafety
-  feedback: 2.0.0
+  feedback: ^2.0.0
+  provider: ^5.0.0
 
 dependency_overrides:
   sentry:
