--- a/dart/analysis_options.yaml
+++ b/dart/analysis_options.yaml
@@ -3,7 +3,7 @@ include: package:pedantic/analysis_options.yaml
 analyzer:
   strong-mode:
     implicit-casts: false
-    #implicit-dynamic: false
+    implicit-dynamic: false
   errors:
     # treat missing required parameters as a warning (not a hint)
     missing_required_param: error
