--- a/flutter/analysis_options.yaml
+++ b/flutter/analysis_options.yaml
@@ -1,6 +1,12 @@
 include: package:pedantic/analysis_options.yaml
 
 analyzer:
+  language:
+    # https://github.com/dart-lang/language/blob/master/resources/type-system/strict-raw-types.md
+    strict-raw-types: true
+  strong-mode:
+    implicit-casts: false
+    implicit-dynamic: false
   errors:
     # treat missing required parameters as a warning (not a hint)
     missing_required_param: error
