--- a/.github/workflows/e2e_dart.yml
+++ b/.github/workflows/e2e_dart.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: 'ubuntu-latest'
     defaults:
       run:
-        working-directory: ./e2e
+        working-directory: ./e2e_test
     strategy:
       fail-fast: false
       matrix:
