--- a/.github/workflows/e2e_dart.yml
+++ b/.github/workflows/e2e_dart.yml
@@ -15,6 +15,8 @@ jobs:
       fail-fast: false
       matrix:
         sdk: [stable, beta, dev]
+    env:
+      SENTRY_AUTH_TOKEN: ${{ secrets.SENTRY_AUTH_TOKEN }}
 
     steps:
         - uses: dart-lang/setup-dart@v1
