Replace package_info_plus instead by package_info
Reason: package_info_plus-1.0.4/android/src/main/java/dev/fluttercommunity/plus/packageinfo/PackageInfoPlugin.java uses or overrides a deprecated API.

--- a/flutter/pubspec.yaml
+++ b/flutter/pubspec.yaml
@@ -14,7 +14,7 @@ dependencies:
   flutter_web_plugins:
     sdk: flutter
   sentry: ^6.0.0-beta.1
-  package_info_plus: ^1.0.0
+  package_info: ^2.0.2
 
 dev_dependencies:
   flutter_test:
