--- a/flutter/example/pubspec.yaml
+++ b/flutter/example/pubspec.yaml
@@ -36,7 +36,7 @@ sentry_plugin:
   project: sentry-flutter
   org: sentry-sdks
 
-  # or set by env. var. SENTRY_AUTH_TOKEN
+  # set by env. var. SENTRY_AUTH_TOKEN
   #auth_token:
 
   # default 'warning'
