--- a/e2e_test/analysis_options.yaml
+++ b/e2e_test/analysis_options.yaml
@@ -2,4 +2,4 @@
 # details and rationale, see
 # https://github.com/dart-lang/pedantic#enabled-lints.
 
-include: package:pedantic/analysis_options.yaml
+include: package:lints/recommended.yaml
