check lints and style in e2e test

--- a/.github/workflows/e2e_dart.yml
+++ b/.github/workflows/e2e_dart.yml
@@ -26,4 +26,6 @@ jobs:
         - name: Test 
           run: |
             dart pub get
+            dart analyze --fatal-infos
+            dart format --set-exit-if-changed ./
             dart run
