--- a/.github/workflows/e2e_dart.yml
+++ b/.github/workflows/e2e_dart.yml
@@ -8,6 +8,9 @@ jobs:
   build:
     name: E2E
     runs-on: 'ubuntu-latest'
+    defaults:
+      run:
+        working-directory: ./e2e_test
     strategy:
       fail-fast: false
       matrix:
@@ -20,6 +23,9 @@ jobs:
           with:
             sdk: ${{ matrix.sdk }}
         - uses: actions/checkout@v2
-        - name: exit successfully 
+        - name: Test 
           run: |
-            echo 'all good'
+            dart pub get
+            dart analyze --fatal-infos
+            dart format --set-exit-if-changed ./
+            dart run
