--- a/flutter/example/pubspec.yaml
+++ b/flutter/example/pubspec.yaml
@@ -1,6 +1,6 @@
 name: sentry_flutter_example
 description: Demonstrates how to use the sentry_flutter plugin.
-version: 0.1.2+3
+version: 0.0.4+4
 
 publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
@@ -31,8 +31,12 @@ flutter:
   uses-material-design: true
 
 sentry_plugin:
+  # enabled by default
+  upload_native_symbols: false
   # disabled by default
   include_native_sources: true
+  # disabled by default
+  upload_source_maps: true
   project: sentry-flutter
   org: sentry-sdks
 
@@ -41,3 +45,5 @@ sentry_plugin:
 
   # default 'warning'
   log_level: error
+
+  version: sentry_flutter_example@0.0.4+4
