fix sourcemaps upload

--- a/flutter/example/pubspec.yaml
+++ b/flutter/example/pubspec.yaml
@@ -1,6 +1,6 @@
 name: sentry_flutter_example
 description: Demonstrates how to use the sentry_flutter plugin.
-version: 0.0.5+5
+version: 0.0.7+7
 
 publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
@@ -45,3 +45,6 @@ sentry_plugin:
 
   # default 'warning'
   log_level: error
+
+  # default to build/web
+  #web_build_path: ...
