--- a/flutter/android/build.gradle
+++ b/flutter/android/build.gradle
@@ -56,6 +56,6 @@ android {
 }
 
 dependencies {
-    api 'io.sentry:sentry-android:5.1.0-beta.6'
+    api 'io.sentry:sentry-android:5.1.0'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
 }
