--- a/dart/example_web/pubspec.yaml
+++ b/dart/example_web/pubspec.yaml
@@ -1,7 +1,7 @@
 name: sentry_dart_web_example
 description: An absolute bare-bones web app.
 
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: 'none'
 
 environment:
   sdk: '>=2.12.0 <3.0.0'
@@ -13,6 +13,7 @@ dev_dependencies:
   build_runner: ^1.11.5
   build_web_compilers: ^2.16.4
   pedantic: ^1.11.0
+  webdev: ^2.7.4
 
 dependency_overrides:
   sentry:
