--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -46,6 +46,12 @@ jobs:
             dart test -p vm --coverage=coverage
             dart pub run coverage:format_coverage --lcov --in=coverage --out=coverage/lcov.info --packages=.packages --report-on=lib
 
+        - name: Build example
+          run: |
+            cd example
+            dart pub get
+            dart compile
+
         - uses: codecov/codecov-action@v1
           if: runner.os == 'Linux'
           with:
