--- a/.github/workflows/web-example-ghpages.yml
+++ b/.github/workflows/web-example-ghpages.yml
@@ -8,9 +8,17 @@ jobs:
   build:
     runs-on: ubuntu-latest
 
+    env:
+      SENTRY_AUTH_TOKEN: ${{ secrets.SENTRY_AUTH_TOKEN }}
+
     steps:
       - uses: actions/checkout@v2
       - uses: subosito/flutter-action@v1
-      - uses: erickzanardo/flutter-gh-pages@v3
+      - uses: erickzanardo/flutter-gh-pages@v6
         with:
           workingDir: flutter/example
+
+      - name: Upload source maps
+        run: |
+          cd flutter/example
+          dart run sentry_dart_plugin
