generate source maps

--- a/.github/workflows/web-example-ghpages.yml
+++ b/.github/workflows/web-example-ghpages.yml
@@ -19,6 +19,7 @@ jobs:
       - uses: erickzanardo/flutter-gh-pages@v6
         with:
           workingDir: flutter/example
+          customArgs: --source-maps
 
       - name: Upload source maps
         run: |
