--- a/flutter/example/pubspec.yaml
+++ b/flutter/example/pubspec.yaml
@@ -1,6 +1,6 @@
 name: sentry_flutter_example
 description: Demonstrates how to use the sentry_flutter plugin.
-version: 6.0.0-beta.5
+version: 6.0.0-beta.55
 
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
@@ -34,3 +34,4 @@ sentry:
   project: sentry-flutter
   org: sentry-sdks
   log_level: error
+  wait_for_processing: true
