--- a/.github/workflows/web-example-ghpages.yml
+++ b/.github/workflows/web-example-ghpages.yml
@@ -1,10 +1,8 @@
 name: Flutter Web Example GH-Pages
 
-# on:
-#   release:
-#     types: [published]
 on:
-  pull_request:
+  release:
+    types: [published]
 
 jobs:
   build:
