--- a/flutter/example/pubspec.yaml
+++ b/flutter/example/pubspec.yaml
@@ -1,6 +1,6 @@
 name: sentry_flutter_example
 description: Demonstrates how to use the sentry_flutter plugin.
-version: 0.1.2+3
+version: 6.0.0-beta.5
 
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
@@ -16,6 +16,9 @@ dependencies:
   feedback: ^2.0.0
   provider: ^5.0.0
 
+dev_dependencies:
+  sentry_dart_plugin: ^1.0.0-alpha.2
+
 dependency_overrides:
   sentry:
     path: ../../dart
@@ -24,3 +27,11 @@ dependency_overrides:
 
 flutter:
   uses-material-design: true
+
+sentry:
+  upload_native_symbols: false
+  upload_source_maps: true
+  project: sentry-flutter
+  org: sentry-sdks
+  log_level: error
+  wait_for_processing: true
