--- a/flutter/example/android/app/build.gradle
+++ b/flutter/example/android/app/build.gradle
@@ -101,6 +101,6 @@ dependencies {
 
 // uncomment this to upload debug symbols to Sentry
 // sentry {
-//     uploadNativeSymbols true
-//     includeNativeSources true
+//     uploadNativeSymbols = true
+//     includeNativeSources = true
 // }
