--- a/flutter/example/android/build.gradle
+++ b/flutter/example/android/build.gradle
@@ -1,5 +1,5 @@
 buildscript {
-    ext.kotlin_version = '1.4.10'
+    ext.kotlin_version = '1.4.31'
     repositories {
         google()
         jcenter()
@@ -7,12 +7,12 @@ buildscript {
     }
 
     dependencies {
-        classpath 'io.sentry:sentry-android-gradle-plugin:1.7.36'
+        classpath 'io.sentry:sentry-android-gradle-plugin:2.1.4'
         // Flutter is incompatible with AGP 4.1.x yet
         //  No such property: scope for class: com.android.build.gradle.internal.variant.ApplicationVariantData
-        classpath 'com.android.tools.build:gradle:4.0.2'
+        classpath 'com.android.tools.build:gradle:4.1.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpath 'com.ydq.android.gradle.build.tool:nativeBundle:1.0.7'
+        classpath 'io.github.howardpang:androidNativeBundle:1.0.9'
     }
 }
 
